# simply-kaspa-indexer

./: .dockerignore  .gitignore  Cargo.toml  ENHANCED_INDEXER_FEATURES.md  LICENSE  PROTOCOLS.md  README.md  docker-compose-example.yaml  filters.yaml.example
.github/workflows/: docker.yml
analyzer/: Cargo.toml  README.md
analyzer/src/: main.rs
cli/: Cargo.toml  build.rs
cli/src/: bloom_filter.rs  cli_args.rs  filter_config.rs  lib.rs  prefix_trie.rs
database/: Cargo.toml
database/migrations/: 11_enhanced_indexer.down.sql  11_enhanced_indexer.up.sql  12_add_category.down.sql  12_add_category.up.sql
database/migrations/schema/: down.sql  up.sql  v10_to_v20.sql  v11_to_v12.sql  v20_to_v21.sql  v21_to_v22.sql  v22_to_v23.sql  v23_to_v24.sql  v9_to_v10.sql
database/src/: client.rs  lib.rs  tag_cache.rs
database/src/models/: block.rs  block_transaction.rs  mod.rs  sequencing_commitment.rs  tag_provider.rs  transaction.rs  transaction_acceptance.rs  transaction_input.rs  transaction_output.rs  utxo.rs
database/src/models/query/: api.rs  database_details.rs  mod.rs
database/src/models/types/: hash.rs
database/src/query/: common.rs  delete.rs  insert.rs  misc.rs  mod.rs  select.rs  upsert.rs
docker/: Dockerfile
examples/: filters_combined_selective.yaml  filters_igra_only.yaml  filters_kasplex_only.yaml  filters_mining_pools.yaml  filters_tagging_all.yaml
examples/light-integrator/: docker-compose.yaml  postgresql.conf
indexer/: Cargo.toml
indexer/src/: checkpoint.rs  lib.rs  macros.rs  main.rs  prune.rs  seqcom.rs  settings.rs  utxo_set.rs  vars.rs
indexer/src/blocks/: fetch_blocks.rs  process_blocks.rs
indexer/src/mapping/: mapper.rs  transactions.rs
indexer/src/signal/: signal_handler.rs
indexer/src/transactions/: process_transactions.rs
indexer/src/utils/: fifo_cache.rs  mod.rs
indexer/src/utxo_import/: p2p_initializer.rs  utxo_set_importer.rs
indexer/src/virtual_chain/: accept_transactions.rs  add_chain_blocks.rs  fetch_virtual_chain.rs  mod.rs  process_virtual_chain.rs  remove_chain_blocks.rs
indexer/src/web/: web_server.rs
indexer/src/web/endpoint/: admin.rs  api.rs  blocks.rs  health.rs  metrics.rs  mod.rs
indexer/src/web/model/: api.rs  metrics.rs  mod.rs
kaspad/src/: manager.rs
mapping/: Cargo.toml
mapping/src/: blocks.rs  mapper.rs  transactions.rs
retrofit/: Cargo.toml  README.md
retrofit/src/: main.rs
signal/: Cargo.toml
signal/src/: signal_handler.rs
