[workspace]
resolver = "2"
members = [
    "cli",
    "database",
    "mapping",
    "kaspad",
    "indexer",
    "signal"
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[workspace.package]
rust-version = "1.90.0"
authors = ["suprtypo@pm.me"]
license = "MIT"
license-file = "LICENSE"
edition = "2024"

[workspace.dependencies]
simply-kaspa-cli = { path = "cli" }
simply-kaspa-signal = { path = "signal" }
simply-kaspa-database = { path = "database" }
simply-kaspa-mapping = { path = "mapping" }
simply-kaspa-kaspad = { path = "kaspad" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-p2p-lib = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
tokio = { version = "1.48.0", features = ["default", "signal"] }
tokio-cron-scheduler = "0.15.1"
tonic = { version = "0.14.2", features = ["gzip"] }
futures-util = { version = "0.3.31", default-features = false }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "runtime-tokio-native-tls", "postgres"] }
deadpool = { version = "0.12.3", features = ["managed", "rt_tokio_1"] }
crossbeam-queue = "0.3.12"
moka = { version = "0.12.11", features = ["sync"] }
itertools = "0.14.0"
chrono = { version = "0.4.42", features = ["std", "serde"] }
bigdecimal = "0.4.9"
hex = "0.4.3"
regex = "1.12.2"
indexmap = "2.12.1"
env_logger = "0.11.8"
log = "0.4.29"
vergen-git2 = "1.0.7"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
axum = { version = "0.8.7", features = ["http1", "ws", "json", "tokio"]}
tower-http = { version = "0.6.7", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["hex", "macros"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
bytesize = "2.3.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
url = "2.5.7"
rand = "0.9.2"
