[workspace]
resolver = "2"
members = [
    "cli",
    "database",
    "mapping",
    "kaspad",
    "indexer",
    "signal"
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[workspace.package]
rust-version = "1.96.0"
authors = ["suprtypo@pm.me"]
license = "MIT"
license-file = "LICENSE"
edition = "2024"

[workspace.dependencies]
simply-kaspa-cli = { path = "cli" }
simply-kaspa-signal = { path = "signal" }
simply-kaspa-database = { path = "database" }
simply-kaspa-mapping = { path = "mapping" }
simply-kaspa-kaspad = { path = "kaspad" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v2.0.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v2.0.1" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v2.0.1" }
tokio = { version = "1.52.3", features = ["default", "signal"] }
tokio-cron-scheduler = "0.15.1"
futures-util = { version = "0.3.32", default-features = false }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
deadpool = { version = "0.13.0", features = ["managed", "rt_tokio_1"] }
crossbeam-queue = "0.3.12"
moka = { version = "0.12.15", features = ["sync"] }
itertools = "0.15.0"
chrono = { version = "0.4.45", features = ["std", "serde"] }
hex = "0.4.3"
regex = "1.12.4"
indexmap = "2.14.0"
env_logger = "0.11.10"
log = "0.4.33"
rand = "0.10.1"
vergen-git2 = "10.0.0"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
axum = { version = "0.8.9", features = ["http1", "ws", "json", "tokio"]}
tower-http = { version = "0.7.0", features = ["cors"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "preserve_order", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.21.0", features = ["hex", "macros"] }
serde_json = "1.0.150"
sysinfo = "0.39.5"
bytesize = "2.4.0"
humantime = "2.3.0"
humantime-serde = "1.1.1"
