[package]
name = "simply-kaspa-mapping"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "simply_kaspa_mapping"
crate-type = ["cdylib", "lib"]

[dependencies]

log = "0.4"

kaspa-rpc-core = { workspace = true }

simply-kaspa-cli = { path = "../cli" }

simply-kaspa-database = { path = "../database" }

bigdecimal = "0.4"

hex = "0.4"

rayon.workspace = true


